--- a/example/Makefile
+++ b/example/Makefile
@@ -1,11 +1,20 @@
-IOP_BIN = libntfs_example.elf
+# _____     ___ ____     ___ ____
+#  ____|   |    ____|   |        | |____|
+# |     ___|   |____ ___|    ____| |    \    PS2DEV Open Source Project.
+#-----------------------------------------------------------------------
+# Copyright 2001-2004, ps2dev - http://www.ps2dev.org
+# Licenced under Academic Free License version 2.0
+# Review ps2sdk README & LICENSE files for further details.
+
+IOP_BIN = hello.elf
 IOP_OBJS = main.o
 
-IOP_LIBS = -lkernel -lntfs
-IOP_INCS = -I$(PS2SDK)/iop/include
+IOP_LIBS = -lntfs -lgskit
+IOP_INCLUDES = -I$(PS2DEV)/gsKit/include/
 
 all: $(IOP_BIN)
 
-include $(PS2SDK)/Defs.make
+
+# Include makefiles
 include $(PS2SDK)/samples/Makefile.pref
-include $(PS2SDK)/samples/Makefile.eeglobal
+include $(PS2SDK)/samples/Makefile.iopglobal
