--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,17 @@
 {
-    "files.associations": {
-        "*.ic": "javascript",
-        "*.ids": "javascript",
-        "*.idsq": "javascript",
-        "*.idsv": "javascript",
-        "*.if": "javascript",
-        "*.ijs": "javascript",
-        "*.il": "javascript",
-        "*.ip": "javascript",
-        "*.is": "javascript",
-        "*.it": "javascript",
-        "[0-9]*.config": "javascript",
-        "[0-9]*.model": "javascript",
-        "[0-9]*.view": "javascript",
-        "*.bms": "quickbms",
+    "files.associations": 
+    {
         "deh_main.h": "c",
         "string_view": "c",
         "kernel.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "bdmdriver.h": "c",
+        "types.h": "c",
+        "ea.h": "c",
+        "stddef.h": "c",
+        "malloc.h": "c",
+        "type_traits": "c",
+        "stat.h": "c",
+        "stdlib.h": "c"
     }
 }
