--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,20 @@
 {
     "files.associations": 
     {
+        "*.ic": "javascript",
+        "*.ids": "javascript",
+        "*.idsq": "javascript",
+        "*.idsv": "javascript",
+        "*.if": "javascript",
+        "*.ijs": "javascript",
+        "*.il": "javascript",
+        "*.ip": "javascript",
+        "*.is": "javascript",
+        "*.it": "javascript",
+        "[0-9]*.config": "javascript",
+        "[0-9]*.model": "javascript",
+        "[0-9]*.view": "javascript",
+        "*.bms": "quickbms",
         "deh_main.h": "c",
         "string_view": "c",
         "kernel.h": "c",
@@ -12,6 +26,9 @@
         "malloc.h": "c",
         "type_traits": "c",
         "stat.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "compat.h": "c",
+        "grp.h": "c",
+        "pwd.h": "c"
     }
 }
