add more files to make compile ee support

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,6 +59,10 @@
         "atad.h": "c",
         "bdm.h": "c",
         "irx.h": "c",
-        "sysclib.h": "c"
+        "sysclib.h": "c",
+        "tamtypes.h": "c",
+        "timer.h": "c",
+        "attrib.h": "c",
+        "stdbool.h": "c"
     }
 }
